--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,10 @@ footer {
     margin-top: 20px;
 }
 
+#info{
+    display: flex;
+    justify-content: center;
+}
 /* Responzivní styl */
 @media (max-width: 768px) {
     header nav ul li {
